// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SearchInput Component should match to snapshot 1`] = `
<SearchInput
  filter="ALL"
  keyword=""
  onChangeKeyword={[Function]}
>
  <div
    className="SearchInput"
  >
    <img
      alt=""
      className="SearchInput__icon"
      src={Object {}}
    />
    <input
      className="SearchInput__input"
      onChange={[Function]}
      placeholder="Search widgets"
      type="text"
      value=""
    />
  </div>
</SearchInput>
`;

exports[`Test SearchInput Component should match to snapshot when filter !== ALL 1`] = `
<SearchInput
  filter="FAVORITES"
  keyword=""
  onChangeKeyword={[Function]}
>
  <div
    className="SearchInput"
  >
    <img
      alt=""
      className="SearchInput__icon"
      src={Object {}}
    />
    <input
      className="SearchInput__input"
      onChange={[Function]}
      placeholder="Search in \\"Favorites\\""
      type="text"
      value=""
    />
  </div>
</SearchInput>
`;
